Update build.xml